classic: Fix "Clear All" button readability
Most buttons appear in modal dialogs which keep their normal
appearance in the classic theme, except for the calendar's
"Clear All" which needs a dark text color to be readable on
the light background.

https://gitlab.gnome.org/GNOME/gnome-shell-extensions/issues/26

--- a/data/gnome-classic.scss
+++ b/data/gnome-classic.scss
@@ -86,3 +86,7 @@ $variant: 'light';
 .calendar-day-with-events {
   background-image: url("calendar-today.svg");
 }
+
+.message-list-clear-button.button {
+  color: $fg_color
+}
